--- a/youtube project 1.html
+++ b/youtube project 1.html
@@ -12,64 +12,80 @@
         <div class = "navigation">
             <ul>
                 <li>
-                    <span class = "icon">
-                        <i class="fa fa-apple" aria-hidden="true"></i>
-                    </span>                    
-                    <span class = "title">
-                        <h2>Brand Name</h2>
-                    </span>
+                    <a href="#">
+                        <span class = "icon">
+                            <i class="fa fa-apple" aria-hidden="true"></i>
+                        </span>                    
+                        <span class = "title">
+                            <h2>Brand Name</h2>
+                        </span>
+                    </a>    
                 </li>
                 <li>
-                    <span class = "icon">
-                        <i class="fa fa-home" aria-hidden="true"></i>   
-                    </span>                    
-                    <span class = "title">
-                        Dashboard
-                    </span>
+                    <a href="#">
+                        <span class = "icon">
+                            <i class="fa fa-home" aria-hidden="true"></i>   
+                        </span>                    
+                        <span class = "title">
+                            Dashboard
+                        </span>
+                    </a>    
                 </li>
                 <li>
-                    <span class = "icon"><i class="fa fa-user" aria-hidden="true"></i></span>                    
-                    <span class = "title">
-                        Customers
-                    </span>
+                    <a href="">       
+                        <span class = "icon"><i class="fa fa-user" aria-hidden="true"></i></span>                    
+                        <span class = "title">
+                            Customers
+                        </span>
+                    </a>    
                 </li>
                 <li>
-                    <span class = "icon"><i class="fa fa-commenting" aria-hidden="true"></i></span>                    
-                    <span class = "title">
-                        Messages
-                    </span>
+                    <a href="#">    
+                        <span class = "icon"><i class="fa fa-commenting" aria-hidden="true"></i></span>                    
+                        <span class = "title">
+                            Messages
+                        </span>
+                    </a>
                 </li>
                 <li>
-                    <span class = "icon">
-                        <i class="fa fa-question-circle" aria-hidden="true"></i>
-                    </span>                    
-                    <span class = "title">
-                        Help
-                    </span>
+                    <a href="#">
+                        <span class = "icon">
+                            <i class="fa fa-question-circle" aria-hidden="true"></i>
+                        </span>                    
+                        <span class = "title">
+                            Help
+                        </span>
+                    </a>    
                 </li>
                 <li>
-                    <span class = "icon">
-                        <i class="fa fa-cog" aria-hidden="true"></i>
-                    </span>                    
-                    <span class = "title">
-                        Settings
-                    </span>
+                    <a href="#">
+                        <span class = "icon">
+                            <i class="fa fa-cog" aria-hidden="true"></i>
+                        </span>                    
+                        <span class = "title">
+                            Settings
+                        </span>
+                    </a>    
                 </li>
                 <li>
-                    <span class = "icon">
-                        <i class="fa fa-lock" aria-hidden="true"></i>
-                    </span>                    
-                    <span class = "title">
-                        Password
-                    </span>
+                    <a href="#">
+                        <span class = "icon">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                        </span>                    
+                        <span class = "title">
+                            Password
+                        </span>
+                    </a>    
                 </li>
                 <li>
-                    <span class = "icon">
-                        <i class="fa fa-sign-out" aria-hidden="true"></i>
-                    </span>                    
-                    <span class = "title">
-                        Sign Out
-                    </span>
+                    <a href="">
+                        <span class = "icon">
+                             <i class="fa fa-sign-out" aria-hidden="true"></i>
+                        </span>                    
+                        <span class = "tjitle">
+                            Sign Out
+                        </span>
+                    </a>    
                 </li>
             </ul>
         </div>
