--- a/youtube project 1.html
+++ b/youtube project 1.html
@@ -82,7 +82,7 @@
                         <span class = "icon">
                              <i class="fa fa-sign-out" aria-hidden="true"></i>
                         </span>                    
-                        <span class = "tjitle">
+                        <span class = "title">
                             Sign Out
                         </span>
                     </a>    
