--- a/youtube project 1.html
+++ b/youtube project 1.html
@@ -91,5 +91,23 @@
         </div>
     </div>
 
+    <div class="main">
+        <div class="topbar">
+            <div class="toggle">
+                <div class="search">
+                    <label for="">
+                        <input type="text" placeholder="Search here">
+                    </label>
+                </div>
+                <div class="user">
+                    <img src="user.jpg" alt="">
+
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+
 </body>
 </html>
